# chip8

./: CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp
opcode/: parser.h  types.h
src/: CMakeLists.txt  chip8.cpp  chip8.h
src/opcode/: parser.cpp
src/utils/: bitutils.h
tests/: CMakeLists.txt  test_opcodes.cpp  test_utils.cpp
